--- a/report/section-related-work.tex
+++ b/report/section-related-work.tex
@@ -34,8 +34,8 @@ demonstrated that static embeddings can be obtained from contextual models that
 outperform their contextual counterparts while reducing the computational cost of
 inference.
 Surveys of contextual and static embeddings are given by
-\textcites{Liu2020}{Torregrossa2021}; further analyses of their nature are provided by
-\textcites{Hewitt2019}{Liu2019}{Reif2019}{Brunner2020}.
+\textcites{Liu2020}{Torregrossa2021}; further analyses of contextual embeddings are
+provided by \textcites{Hewitt2019}{Liu2019}{Reif2019}{Brunner2019}.
 
 \textcite{Batchkarov2016} critically analyse word similarity as an evaluation
 methodology for distributional semantic models.
