--- a/report/section-conclusion.tex
+++ b/report/section-conclusion.tex
@@ -15,7 +15,7 @@ the window size.
 The results that I have given must be interpreted in context: the original submission
 authors did not have access to the evaluation dataset prior to submitting their
 results, only the `practice kit' of very few instances, and were therefore unable to
-optimise a parameter such as the window size prior to submission.
+optimize a parameter such as the window size prior to submission.
 Additionally, the models that I used were not necessarily available to the authors.
 With these caveats, I achieved several notable results (\cref{table:best-score}):
 \begin{itemize}
