--- a/report/section-introduction.tex
+++ b/report/section-introduction.tex
@@ -9,7 +9,7 @@ different connotations and emphasis within different expressions
 \parencite[2-3]{Armendariz2020}.
 Historically, however, context-dependence has been a problem for distributional meaning
 representations.
-Founded on the distributional hypothesis \parencites{Harris1954}{Firth1957}, both
+Founded on the distributional hypothesis \parencite[e.g.,][142-143]{Turney2010}, both
 count-based and predictive models of word meaning\footnote{ This terminological
   distinction is due to \textcite{Baroni2014a}.
 } originally
@@ -22,14 +22,14 @@ Prior to the widespread availability of pre-trained language models, this proble
 generally addressed by one of two approaches: firstly, by producing a representation
 for each sense of a target word and disambiguating between them in the given context
 (word-sense disambiguation); or secondly, by composing the representation of the target
-word with the representations of the words in its context (contextualisation).
+word with the representations of the words in its context (contextualization).
 These approaches have been largely overshadowed by the advent of model architectures
 that take sequences as inputs and naturally produce \emph{contextual} representations
 of the items in the sequence, such as Transformers \parencite{Vaswani2017}.
 
 To my knowledge, however, there has been scant direct comparison of the performance of
 these contextual representations with the application of prior methods of
-contextualisation to static representations (\cref{sec:related-work}).
+contextualization to static representations (\cref{sec:related-work}).
 SemEval-2020 Task 3, ``Graded Word Similarity in Context'' \parencite{Armendariz2020a},
 presents an opportunity to make such a comparison.
 Briefly, the task is to predict the human judgment of similarity of the same pair of
