--- a/report/section-results.tex
+++ b/report/section-results.tex
@@ -1,19 +1,19 @@
 \section{Results}
 \label{sec:results}
 
-\import{.}{figure-table-best-score}
+\import{}{figure-table-best-score.tex}
 
 \subsection{Cost-benefit analysis of contextual embeddings}
 \label{sec:cost-benefit}
 
-\import{.}{figure-chart-score-time}
+\import{}{figure-chart-score-time.tex}
 
 \todonum{Write this section.}
 
 \subsection{Language-specificity of window-size effects}
 
 Generally, I found that the scores obtained by all three types of embeddings were
-maximised by a non-zero context-window size.
+maximized by a non-zero context-window size.
 The influence of the window size is intuitive in the case of static embeddings.
 Without a context window, the representations of a target word only differ between
 expressions if the word is represented by different sub-word tokens in the different
@@ -32,5 +32,5 @@ small fraction of the multilingual model's vocabulary.
 My results are broadly consistent with those of \citeauthor{Virtanen2019}, i.e., the
 Finnish-specific models generally outperform the multilingual ones.
 
-% \import{.}{figure-table-best-window-size}
-\import{.}{figure-chart-score-window}
+% \import{}{figure-table-best-window-size}
+\import{}{figure-chart-score-window.tex}
