--- a/report/figure-table.tex
+++ b/report/figure-table.tex
@@ -9,56 +9,44 @@
       operation,
       similarity,
       score,
-      time
-    },
+      time},
   columns/model/.style={
       column name=Embeddings,
       string type,
       postproc cell content/.append style={
-          @cell content={\texttt{##1}}
-        }
-    },
+          @cell content={\texttt{##1}}}},
   columns/model_name/.style={
       column name=Model name,
       column type={L{2.7in}},
       string type,
       postproc cell content/.append style={
-          @cell content={\texttt{##1}}
-        }
-    },
+          @cell content={\texttt{##1}}}},
   columns/language/.style={
       column name=Language,
       string type,
       postproc cell content/.append style={
-          @cell content={\texttt{##1}}
-        }
-    },
+          @cell content={\texttt{##1}}}},
   columns/window/.style={
       column name=Window size,
       column type={R{0.85in}},
-      int detect,
-    },
+      int detect},
   columns/operation/.style={
       column name=Operation,
-      string type,
-    },
+      string type},
   columns/similarity/.style={
       column name=Similarity measure,
-      string type,
-    },
+      string type},
   columns/score/.style={
       column name=Score,
       column type={R{0.35in}},
       fixed,
       fixed zerofill,
-      precision=3,
-    },
+      precision=3},
   columns/time/.style={
       column name=Time (s),
       fixed,
       fixed zerofill,
-      precision=3,
-    },
+      precision=3},
   every head row/.style={after row=\hline},
   best/.style={@cell content=\underline{#1}},
 }
