--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -1,27 +1,29 @@
-\documentclass[11pt]{extarticle}
+\documentclass[11pt]{article}
 \usepackage{graded-similarity}
 
 \begin{document}
 
 \title{SemEval-2020 Task 3: Graded Word Similarity in Context by Composing Pre-trained Embeddings}
-\author{Tim Lawson}
-\date{\today}
+\author[]{Tim Lawson}
+\affil[]{University of Bristol}
+\affil[]{\texttt{tim.lawson@bristol.ac.uk}}
+\date{}
 
 \maketitle
 
-\import*{}{figure-table.tex}
+\import{.}{figure-table.tex}
 
-\import*{}{section-introduction.tex}
+\import{.}{section-introduction.tex}
 
-\import*{}{section-task-definition.tex}
+\import{.}{section-task-definition.tex}
 
-\import*{}{section-related-work.tex}
+\import{.}{section-related-work.tex}
 
-\import*{}{section-methodology.tex}
+\import{.}{section-methodology.tex}
 
-\import*{}{section-results.tex}
+\import{.}{section-results.tex}
 
-\import*{}{section-conclusion.tex}
+\import{.}{section-conclusion.tex}
 
 \printbibliography
 
