--- a/report/section-related-work.tex
+++ b/report/section-related-work.tex
@@ -1,6 +1,8 @@
 \section{Related work}
 \label{sec:related-work}
 
+\subsection{Composition and contextualization}
+
 Many context-based approaches to word-sense disambiguation have been proposed since the
 advent of count-based models of word meaning.
 In the paper that introduced Latent Semantic Analysis (LSA), for example, the authors
@@ -17,6 +19,8 @@ Vector addition and averaging continue to be `surprisingly effective' means to c
 word embeddings \parencite[10]{Boleda2020}, and addition produces plausible results for
 the word-analogy task \parencites[e.g.,][9]{Mikolov2013}[7]{Mikolov2013a}.
 A review of distributional semantic models is given by \textcite{Lenci2018}.
+
+\subsection{Contextual language models}
 
 Nevertheless, models that produce contextual embeddings have achieved widespread
 success on benchmark tasks that involve language understanding
@@ -36,6 +40,8 @@ inference.
 Surveys of contextual and static embeddings are given by
 \textcites{Liu2020}{Torregrossa2021}; further analyses of contextual embeddings are
 provided by \textcites{Hewitt2019}{Liu2019}{Reif2019}{Brunner2019}.
+
+\subsection{Word similarity}
 
 \textcite{Batchkarov2016} critically analyse word similarity as an evaluation
 methodology for distributional semantic models.
