--- a/report/section-introduction.tex
+++ b/report/section-introduction.tex
@@ -26,17 +26,19 @@ word with the representations of the words in its context (contextualization).
 These approaches have been largely overshadowed by the advent of model architectures
 that take sequences as inputs and naturally produce \emph{contextual} representations
 of the items in the sequence, such as Transformers \parencite{Vaswani2017}.
-
 To my knowledge, however, there has been scant direct comparison of the performance of
 these contextual representations with the application of prior methods of
-contextualization to static representations (\cref{sec:related-work}).
+contextualization to static representations.
+
 SemEval-2020 Task 3, ``Graded Word Similarity in Context'' \parencite{Armendariz2020a},
 presents an opportunity to make such a comparison.
 Briefly, the task is to predict the human judgment of similarity of the same pair of
 words in two different contexts.
 I elected to focus on the first sub-task, which is to predict the \emph{change} in
-similarity, rather than the absolute similarity in each context
-(\cref{task-definition}).
+similarity, rather than the absolute similarity in each context.
 Specifically, I evaluated the results obtained by computing the cosine similarity
-between static and contextual embeddings and the composition of these embeddings within
-a fixed-size context window (\cref{sec:methodology}).
+between the static and contextual embeddings of different language models, and their
+composition with the embeddings within a fixed-size context window.\footnote{The code
+  that produced these results is available at
+  \github{https://github.com/tslwn/graded-similarity}{tslwn/graded-similarity}.
+}
