--- a/report/section-methodology.tex
+++ b/report/section-methodology.tex
@@ -67,14 +67,12 @@ library \parencite{Wolf2020a} and are listed in \cref{table:language-models}.
 
 The primary comparison that I made was between these models' static input and
 contextual output representations.
-However, several of the task submissions used a combination of a Transformer's
-hidden-states
-\parencites[e.g.][276]{Gamallo2020}[61]{CostellaPessutto2020}[145]{Hettiarachchi2020};
-hence, I also evaluated an example of this technique.
+Several of the task submissions used a combination of a Transformer's hidden-states
+\parencites[e.g.][276]{Gamallo2020}[61]{CostellaPessutto2020}[145]{Hettiarachchi2020}.
 This method is supported by the analysis of \textcite{Ethayarajh2019}, who found that
 the upper layers of Transformer models produce more context-dependent representations.
-A thorough comparison of variants of this technique is, hwoever, beyond the scope of
-this paper.
+Hence, I also evaluated an example of this method -- a thorough comparison of its
+variants is, however, beyond the scope of this paper.
 \begin{samepage}
   Hereafter, I refer to the three kinds of embeddings that I evaluated as:
   \begin{itemize}
